golden/error/typecheck_empty_struct_parameter.test
-- Note, the query does not contain any query parameters,
-- so the generated struct would be empty, which is invalid.
-- @query insert_user(user: User)
INSERT INTO users (name, email) VALUES ('Eldon', 'eldon@tyrell.com');


 --> stdin:3:28
  |
3 | -- @query insert_user(user: User)
  |                             ^~~~
Error: Annotation contains a struct parameter, but the query body contains no query parameters.

Hint: Add query parameters with type annotations to the query, to turn them into fields of the struct.
